--- a/config
+++ b/config
@@ -27,7 +27,8 @@ exec nitrogen --restore &
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
-
+exec ibus-daemon -drx
+exec mocicon
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
@@ -36,14 +37,14 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ to
 bindsym Mod1+0 exec pactl set-sink-volume bluez_sink.14_3F_A6_17_40_53.a2dp_sink +1% && $refresh_i3status
 bindsym Mod1+9 exec pactl set-sink-volume bluez_sink.14_3F_A6_17_40_53.a2dp_sink -1% && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym XF86MonBrightnessUp exec xbacklight +0.5
-bindsym XF86MonBrightnessDown exec xbacklight -0.5
+bindsym XF86MonBrightnessUp exec brightnessctl set 50+
+bindsym XF86MonBrightnessDown exec brightnessctl set 50-
 # use these keys for focus, movement, and resize directions when reaching for
 # the arrows is not convenient
-set $up l
-set $down k
-set $left j
-set $right semicolon
+#set $up l
+#set $down k
+#set $left j
+#set $right semicolon
 
 # use Mouse+Mod1 to drag floating windows to their wanted position
 floating_modifier Mod1
@@ -52,17 +53,16 @@ floating_modifier Mod1
 bindsym control+Mod1+t exec alacritty
 # kill focused window
 bindsym Mod1+F4 kill
-
+bindsym control+Mod4+Delete exec xkill
+bindsym Mod1+P exec poweroff
 # start dmenu (a program launcher)
 #bindsym Mod1+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym Mod1+d exec "rofi -modi drun,run -show drun"
+#bindsym Mod1+d exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindsym Mod1+d exec --no-startup-id i3-dmenu-desktop
+bindsym Mod4+f exec --no-startup-id i3-dmenu-desktop
 
-# change focus
-bindsym Mod1+$left focus left
 bindsym Mod1+$down focus down
 bindsym Mod1+$up focus up
 bindsym Mod1+$right focus right
@@ -144,16 +144,16 @@ bindsym Mod4+9 workspace number $ws9
 bindsym Mod4+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym Mod1+Shift+1 move container to workspace number $ws1
-bindsym Mod1+Shift+2 move container to workspace number $ws2
-bindsym Mod1+Shift+3 move container to workspace number $ws3
-bindsym Mod1+Shift+4 move container to workspace number $ws4
-bindsym Mod1+Shift+5 move container to workspace number $ws5
-bindsym Mod1+Shift+6 move container to workspace number $ws6
-bindsym Mod1+Shift+7 move container to workspace number $ws7
-bindsym Mod1+Shift+8 move container to workspace number $ws8
-bindsym Mod1+Shift+9 move container to workspace number $ws9
-bindsym Mod1+Shift+0 move container to workspace number $ws10
+bindsym Mod4+Shift+1 move container to workspace number $ws1
+bindsym Mod4+Shift+2 move container to workspace number $ws2
+bindsym Mod4+Shift+3 move container to workspace number $ws3
+bindsym Mod4+Shift+4 move container to workspace number $ws4
+bindsym Mod4+Shift+5 move container to workspace number $ws5
+bindsym Mod4+Shift+6 move container to workspace number $ws6
+bindsym Mod4+Shift+7 move container to workspace number $ws7
+bindsym Mod4+Shift+8 move container to workspace number $ws8
+bindsym Mod4+Shift+9 move container to workspace number $ws9
+bindsym Mod4+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
 bindsym Mod1+Shift+c reload
@@ -192,7 +192,7 @@ bindsym Mod1+r mode "resize"
 bindsym Mod4+b exec brave
 bindsym Mod1+m exec minecraft-launcher
 bindsym Mod1+1 exec spacefm
-bindsym Mod1+3 exec spotify
+bindsym Mod1+3 exec alacritty -e spt ;exec spotifyd --no-daemon
 bindsym Mod1+2 exec libreoffice
 bindsym Mod1+F2 exec alacritty -e nmtui
 bindsym Mod1+F3 exec alacritty -e bluetoothctl
@@ -208,9 +208,10 @@ bindsym Mod4+F5 exec brave web.whatsapp.com
 bindsym Mod1+F1 exec wifi toggle
 bindsym Mod1+4 exec signal-desktop
 bindsym Mod1+5 exec discord
-bindsym Mod1+o exec playerctl play-pause
-bindsym Mod1+i exec playerctl previous
-bindsym Mod1+p exec playerctl next
+bindsym Mod1+k exec playerctl play-pause
+bindsym Mod1+j exec playerctl previous
+bindsym Mod1+l exec playerctl next
+bindsym Mod1+F6 exec alacritty -e mocp
 #mouse button
 bindsym button4 exec ~/.i3/scripts/custom_wheel_up
 bindsym button5 exec ~/.i3/scripts/custom_wheel_down
