--- a/config
+++ b/config
@@ -28,7 +28,6 @@ exec nitrogen --restore &
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 exec ibus-daemon -drx
-exec mocicon
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
@@ -164,27 +163,25 @@ bindsym Mod1+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
+       # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym $left       resize shrink width 10 px or 10 ppt
-        bindsym $down       resize grow height 10 px or 10 ppt
-        bindsym $up         resize shrink height 10 px or 10 ppt
-        bindsym $right      resize grow width 10 px or 10 ppt
+       # Pressing left will shrink the windows width.
+       # Pressing up will shrink the windows height.
+       bindsym $left       resize shrink width 10 px or 10 ppt
+       bindsym $down       resize grow height 10 px or 10 ppt
+       bindsym $up         resize shrink height 10 px or 10 ppt
+       bindsym $right      resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left        resize shrink width 10 px or 10 ppt
-        bindsym Down        resize grow height 10 px or 10 ppt
-        bindsym Up          resize shrink height 10 px or 10 ppt
-        bindsym Right       resize grow width 10 px or 10 ppt
+       # same bindings, but for the arrow keys
+       bindsym Left        resize shrink width 10 px or 10 ppt
+       bindsym Down        resize grow height 10 px or 10 ppt
+       bindsym Up          resize shrink height 10 px or 10 ppt
+       bindsym Right       resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or Mod1+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym Mod1+r mode "default"
+       # back to normal: Enter or Escape or Mod1+r
+       bindsym Return mode "default"
+       bindsym Escape mode "default"
+       bindsym Mod1+r mode "default"
 }
 
 bindsym Mod1+r mode "resize"
@@ -192,11 +189,11 @@ bindsym Mod1+r mode "resize"
 bindsym Mod4+b exec brave
 bindsym Mod1+m exec minecraft-launcher
 bindsym Mod1+1 exec spacefm
-bindsym Mod1+3 exec alacritty -e spt ;exec spotifyd --no-daemon
+bindsym Mod1+3 exec spotify
 bindsym Mod1+2 exec libreoffice
 bindsym Mod1+F2 exec alacritty -e nmtui
 bindsym Mod1+F3 exec alacritty -e bluetoothctl
-bindsym Print exec screengrab
+bindsym Print exec scrot
 bindsym Mod4+Escape exec alacritty -e htop
 bindsym Mod4+F1 exec brave gmail.com
 bindsym Mod4+F2 exec brave drive.google.com
@@ -218,8 +215,8 @@ bindsym button5 exec ~/.i3/scripts/custom_wheel_down
 #Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        position top
-	status_command i3status --config /etc/i3status.conf
+       position top
+	status_command LC_ALL=C i3status --config /etc/i3status.conf
 }
 #######################################################################
 # automatically start i3-config-wizard to offer the user to create a
