--- a/i3status.conf
+++ b/i3status.conf
@@ -15,7 +15,7 @@ general {
 order += "volume maste"
 order += "volume master"
 order += "wireless _first_"
-order += "ethernet _first_"
+order += "cpu_temperature 0"
 order += "battery all"
 order += "disk /"
 order += "load"
@@ -27,13 +27,15 @@ wireless _first_ {
         format_down = "W: down"
 }
 
-ethernet _first_ {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+cpu_temperature 0 {
+        format = "T: %degrees °C"
+        path = "/sys/bus/acpi/devices/LNXTHERM\:01/thermal_zone/temp"
 }
+
 
 battery all {
         format = "%status %percentage %remaining"
+	integer_battery_capacity = true
 }
 
 disk "/" {
@@ -45,7 +47,7 @@ load {
 }
 
 memory {
-        format = "%used | %available"
+        format = "%used"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
